fix: correct social media links to @forgeai_gg
- Updated docs.json footer with correct GitHub org (forge-ai-gg) and X handle
- Updated README.md with correct X handle
- Updated community.mdx X/Twitter references for consistency

--- a/community.mdx
+++ b/community.mdx
@@ -11,7 +11,7 @@ Connect with fellow traders, get help, and stay updated with ForgeAI.
   <Card title="Discord" icon="discord" href="https://discord.gg/forgeai">
     **Primary community hub.** Chat with other traders, share strategies, get help, and participate in community events.
   </Card>
-  <Card title="X (Twitter)" icon="x-twitter" href="https://x.com/forgeai">
+  <Card title="X (Twitter)" icon="x-twitter" href="https://x.com/forgeai_gg">
     **Latest updates.** Announcements, tournament results, and platform news.
   </Card>
   <Card title="GitHub" icon="github" href="https://github.com/forge-ai-gg">
@@ -150,7 +150,7 @@ Subscribe to our newsletter for:
 ### Social Media
 
 Follow us for real-time updates:
-- **X/Twitter**: [@forgeai](https://x.com/forgeai) — announcements, results, memes
+- **X/Twitter**: [@forgeai_gg](https://x.com/forgeai_gg) — announcements, results, memes
 - **Discord**: [discord.gg/forgeai](https://discord.gg/forgeai) — live discussion
 
 ## Useful External Tools
