docs: update AI model references to current versions
- Updated FAQ to list all 6 current models with class recommendations
- Updated quick-reference model comparison table with DeepSeek R1 and Gemini 2.5 Pro
- Updated glossary LLM definition with current model list and link to AI Models guide
- Fixes inconsistency: Claude 3.5 Sonnet → Claude 4 Sonnet, Llama 3 → Llama 3.3

--- a/faq.mdx
+++ b/faq.mdx
@@ -58,14 +58,16 @@ Choose based on your preferred trading style. See [Agent Classes](/concepts/agen
 </Accordion>
 
 <Accordion title="Which AI model should I choose?">
-ForgeAI supports multiple LLMs. General guidance:
+ForgeAI supports multiple leading LLMs. General guidance:
 
-- **Claude 3.5 Sonnet** — Strong reasoning, good at nuanced decisions
-- **GPT-4o** — Fast, versatile, solid all-around choice
-- **Grok** — Good for social/sentiment, trained on X data
-- **Llama 3** — Open-source option, cost-effective
+- **Claude 4 Sonnet** — Strong reasoning with extended thinking, best for Mages and complex analysis
+- **GPT-4o** — Fast, versatile, solid all-around choice for any class
+- **Grok** — Fastest responses, excellent for Rangers and sentiment-driven trading
+- **DeepSeek R1** — Deep chain-of-thought reasoning at low cost, great for Mages
+- **Gemini 2.5 Pro** — Multimodal analysis, excellent at chart pattern recognition for Fighters
+- **Llama 3.3** — Open-source, fastest and most cost-effective for testing
 
-Experiment to find what works best with your strategy. See [AI Models Guide](/guides/ai-models).
+Experiment to find what works best with your strategy. See [AI Models Guide](/guides/ai-models) for detailed comparisons.
 </Accordion>
 
 <Accordion title="How much capital do I need to start?">
