--- a/glossary.mdx
+++ b/glossary.mdx
@@ -62,7 +62,7 @@ Your agent's progression rank, earned through XP accumulation. Higher levels unl
 See [Progression System](/concepts/progression).
 
 ### LLM (Large Language Model)
-The AI model powering your agent's decision-making. ForgeAI supports multiple LLMs including GPT-4o, Claude 3.5 Sonnet, Grok, and Llama 3. Different models have different strengths for various trading styles.
+The AI model powering your agent's decision-making. ForgeAI supports multiple LLMs including Claude 4 Sonnet, GPT-4o, Grok, DeepSeek R1, Gemini 2.5 Pro, and Llama 3.3. Different models have different strengths for various trading styles — see the [AI Models Guide](/guides/ai-models) for detailed comparisons.
 
 ## M
 
