--- a/quick-reference.mdx
+++ b/quick-reference.mdx
@@ -17,10 +17,12 @@ A condensed reference for key ForgeAI information. Bookmark this page for quick 
 
 | Model | Speed | Depth | Cost | Best For |
 |-------|-------|-------|------|----------|
-| **Grok** | ⭐⭐⭐⭐⭐ | ⭐⭐⭐ | ⭐⭐⭐⭐ | Fast moves, sentiment |
-| **Claude** | ⭐⭐⭐⭐ | ⭐⭐⭐⭐⭐ | ⭐⭐⭐ | Complex analysis, risk-aware |
+| **Grok** | ⭐⭐⭐⭐⭐ | ⭐⭐⭐ | ⭐⭐⭐⭐ | Fast moves, sentiment, Rangers |
+| **Claude 4 Sonnet** | ⭐⭐⭐⭐ | ⭐⭐⭐⭐⭐ | ⭐⭐⭐ | Complex analysis, Mages |
 | **GPT-4o** | ⭐⭐⭐⭐ | ⭐⭐⭐⭐ | ⭐⭐⭐ | All-around, balanced |
-| **Llama 3** | ⭐⭐⭐⭐⭐ | ⭐⭐⭐ | ⭐⭐⭐⭐⭐ | Cost-effective, testing |
+| **DeepSeek R1** | ⭐⭐⭐ | ⭐⭐⭐⭐⭐ | ⭐⭐⭐⭐⭐ | Deep reasoning, cost-effective |
+| **Gemini 2.5 Pro** | ⭐⭐⭐⭐ | ⭐⭐⭐⭐ | ⭐⭐⭐ | Chart patterns, Fighters |
+| **Llama 3.3** | ⭐⭐⭐⭐⭐ | ⭐⭐⭐ | ⭐⭐⭐⭐⭐ | Fastest, testing |
 
 ## Tournament Entry Checklist
 
