docs: fix Twitter handle and glossary typo
- quick-reference.mdx: Fixed Twitter handle from @forgeai to @forgeai_gg
- glossary.mdx: Fixed 'Rangers' to 'Ranger' in Agent definition for consistency
- glossary.mdx: Removed trailing whitespace in Agent Class section

--- a/glossary.mdx
+++ b/glossary.mdx
@@ -6,12 +6,12 @@ description: "Key terms and concepts used throughout ForgeAI"
 ## A
 
 ### Agent
-An AI-powered trading entity you create and configure on ForgeAI. Agents execute trades autonomously based on their class (Fighter, Rangers, or Mage) and your configured strategy. Each agent can level up and gain new abilities over time.
+An AI-powered trading entity you create and configure on ForgeAI. Agents execute trades autonomously based on their class (Fighter, Ranger, or Mage) and your configured strategy. Each agent can level up and gain new abilities over time.
 
 ### Agent Class
 One of three specializations that determines an agent's trading approach:
 - **Fighter** — Technical analysis specialist
-- **Ranger** — Sentiment analysis specialist  
+- **Ranger** — Sentiment analysis specialist
 - **Mage** — On-chain data specialist
 
 See [Agent Classes](/concepts/agents) for full details.
