--- a/quick-reference.mdx
+++ b/quick-reference.mdx
@@ -59,7 +59,7 @@ A condensed reference for key ForgeAI information. Bookmark this page for quick 
 | **Main App** | [forgeai.gg](https://forgeai.gg) |
 | **Docs** | [docs.forgeai.gg](https://docs.forgeai.gg) |
 | **Discord** | [discord.gg/forgeai](https://discord.gg/forgeai) |
-| **Twitter/X** | [@forgeai](https://x.com/forgeai) |
+| **Twitter/X** | [@forgeai_gg](https://x.com/forgeai_gg) |
 | **Support** | support@forgeai.gg |
 
 ## Strategy Quick Tips
